fix: resolve issue where navbar was not clickable on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -334,6 +334,10 @@ h3.skills,
     margin: 30px;
 }
 
+.my-3 {
+    margin: 30px 0;
+}
+
 .title-hero {
     font-size: clamp(2.5rem, 8vw, 5rem);
     font-weight: 900;
